# backend-agent-negotiator

./: .gitignore  README.md  main.py  pyproject.toml
model/: config.py  database.py
model/dispatch/: dispatch.py  schemas.py
model/negotiation/: model.py  schemas.py
model/transcript/: model.py  schemas.py
routes/: negotiation.py  negotiations.py  transcript.py
services/: transcript_stream.py
